--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="home">
     <div>
-        <nav>
-            <a href="#home" class="nav-link">Home</a>
+        <nav class="navbar">
+            <a href="#home" id="home-nav-link" class="nav-link">Home</a>
             <a href="/about.html" class="nav-link">About</a>
             <a href="/skills.html" class="nav-link">Skills</a>
             <a href="/work.html" class="nav-link">Work</a>
