Navbar completed all pages

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="home">
+<body class="background">
     <div>
         <nav class="navbar">
-            <a href="#home" id="home-nav-link" class="nav-link">Home</a>
+            <a href="#home" id="active-nav-link" class="nav-link">Home</a>
             <a href="/about.html" class="nav-link">About</a>
             <a href="/skills.html" class="nav-link">Skills</a>
             <a href="/work.html" class="nav-link">Work</a>
