--- a/contact.html
+++ b/contact.html
@@ -5,17 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>About</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="background">
     <div>
-        <nav>
+        <nav class="navbar">
             <a href="/index.html" class="nav-link">Home</a>
             <a href="/about.html" class="nav-link">About</a>
             <a href="/skills.html" class="nav-link">Skills</a>
             <a href="/work.html" class="nav-link">Work</a>
-            <a href="/contact.html" class="nav-link">Contact</a>
+            <a href="/contact.html" id="active-nav-link" class="nav-link">Contact</a>
         </nav>
 
         <h1>Contact</h1>
