Footer completed all pages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="background">
-    <div>
+    <div class="min-height">
         <nav class="navbar">
             <a href="#home" id="active-nav-link" class="nav-link">Home</a>
             <a href="/about.html" class="nav-link">About</a>
@@ -21,6 +21,10 @@
 
         <h1>Home</h1>
     </div>
+
+    <footer>
+        <span>Nayeem</span> | 2022 all rights reserved.
+    </footer>
 </body>
 
 </html>
