Home page completed

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
             <a href="/contact.html" class="nav-link">Contact</a>
         </nav>
 
-        <h1>Home</h1>
+        <div class="welcome-title">
+            <p class="welcome-p-title">Hi, welcome to my personal website.</p>
+            <h1 class="welcome-h1-title">This is Nayeem</h1>
+            <h1 class="welcome-h1-title-2">I'm a Tech Enthusiast</h1>
+        </div>
     </div>
 
     <footer>
