--- a/about.html
+++ b/about.html
@@ -19,7 +19,22 @@
             <a href="/contact.html" class="nav-link">Contact</a>
         </nav>
 
-        <h1>About</h1>
+        <div class="about-me">
+            <h2>About me</h2>
+            <h4>who i am</h4>
+            <div class="about-me-flex">
+                <div>
+                    <h3>Editor | Tech Enthusiast | Web Developer</h3>
+
+                    <h4>I am studying B.Sc. in CSE at Daffodil International University. I always try to learn new
+                        technology. I like to build PC though I have built it twice only. When I have time, I watch
+                        anime, play games, building or refine websites. I also enjoy listening to music. My goal is to
+                        be one of the best Web Developer.</h4>
+                </div>
+
+                <img class="my-image" src="/resources/image.jpg" alt="" srcset="">
+            </div>
+        </div>
     </div>
 
     <footer>
