--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="welcome-title">
             <p class="welcome-p-title">Hi, welcome to my personal website.</p>
             <h1 class="welcome-h1-title">This is Nayeem</h1>
-            <h1 class="welcome-h1-title-2">I'm a Tech Enthusiast</h1>
+            <h1 class="welcome-h1-title-2">I'm a Tech Enthusiast ...</h1>
         </div>
     </div>
 
