--- a/skills.html
+++ b/skills.html
@@ -19,7 +19,21 @@
             <a href="/contact.html" class="nav-link">Contact</a>
         </nav>
 
-        <h1>Skills</h1>
+        <div class="about-me">
+            <h2 class="skills-h2">My skills</h2>
+            <h3 class="skills-h3">what i know</h3>
+            <div class="about-me-flex">
+                <div>
+                    <h3>My creative skills</h3>
+
+                    <h4>Hello, this is Nayeem. I am a programmer, specializing in the Web Development area. For the last
+                        6 months, I have been developing websites using React.js, HTML, CSS, JavaScript, Node.js,
+                        Express.js, and MongoDB.</h4>
+                </div>
+
+                <img class="skills-image" src="/resources/skills.png" alt="" srcset="">
+            </div>
+        </div>
     </div>
 
     <footer>
