Work page completed

--- a/work.html
+++ b/work.html
@@ -19,7 +19,26 @@
             <a href="/contact.html" class="nav-link">Contact</a>
         </nav>
 
-        <h1>Work</h1>
+        <div class="about-me">
+            <h2>Work</h2>
+            <h3>working activities</h3>
+
+            <p>...</p>
+
+            <br>
+            <br>
+
+            <h3>achievements</h3>
+            <p>Never got an achievement related to sports or study.<br>But gotten more than 600 achievements in games!
+
+                <br>
+                <br>
+                <br>
+
+            <h3>Experiences</h3>
+            <p>I've experience with PC hardware and software.<br>Can make a full desktop from scratch.<br>Have a basic
+                idea with the MERN stack. etc.</p>
+        </div>
     </div>
 
     <footer>
