Work page updated

--- a/work.html
+++ b/work.html
@@ -35,7 +35,7 @@
                 <br>
                 <br>
 
-            <h3>Experiences</h3>
+            <h3>experiences</h3>
             <p>I've experience with PC hardware and software.<br>Can make a full desktop from scratch.<br>Have a basic
                 idea with the MERN stack. etc.</p>
         </div>
