Contact page completed

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,13 @@
             <a href="/contact.html" id="active-nav-link" class="nav-link">Contact</a>
         </nav>
 
-        <h1>Contact</h1>
+        <div class="about-me contact">
+            <h2>Contact</h2>
+            <h3>me me and me</h3>
+
+            <p class="contact-number">Phone: <span>+88017943544**</span></p>
+            <p class="contact-email">Email: <span>fakeemail@gmail.com</span></p>
+        </div>
     </div>
 
     <footer>
