Skills page updated

--- a/skills.html
+++ b/skills.html
@@ -27,7 +27,8 @@
                     <h3>My creative skills</h3>
 
                     <h4>Hello, this is Nayeem. I am a programmer, specializing in the Web Development area. For the last
-                        6 months, I have been developing websites using React.js, HTML, CSS, JavaScript, Node.js,
+                        couple of months, I have been developing websites using React.js, HTML, CSS, JavaScript,
+                        Node.js,
                         Express.js, and MongoDB.</h4>
                 </div>
 
