--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="background">
+<body class="background-home">
     <div class="min-height">
         <nav class="navbar">
             <a href="#home" id="active-nav-link" class="nav-link">Home</a>
